# gears-cli

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs
.github/: dependabot.yml
ci/: docker.sh
resource/: policy-token.rego
scripts/: load_policy.sh  run.sh
src/: app.rs  cli.yml  command_grammar.rustpeg  main.rs  main.rs.racertmp  mod.rs  model_executor.rs  model_schema.rs  server.rs  shell.rs
src/modelstore/: filesystem.rs  mod.rs  model_executor.rs  sqlite.rs  sqlite_schema.rs
src/modelstore/migrations/sqlite/20181010012402_create_models/: down.sql  up.sql
