[package]
name = "gears-cli"
version = "0.1.11"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
description = "Gears CLI tool"
documentation = "https://docs.rs/xflow"
homepage = "https://github.com/gears-project/gears-cli"
repository = "https://github.com/gears-project/gears-cli.git"
readme = "README.md"
keywords = ["gears"]
categories = []
license = "MIT"
build = "build.rs"

[dependencies]
gears = "0.1.5"
log = "0.4"
env_logger = "0.5"
rustyline = "1.0"

[dependencies.clap]
version = "~2.32.0"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[build-dependencies]
peg = { version = "0.5" }

[replace]
# "gears:0.1.5" = { path = "/home/michiel/dev/gears-project/gears-core-rust" }
"gears:0.1.5" = { git = 'https://github.com/gears-project/gears-core-rust' }

[package.metadata.deb]
maintainer = "Michiel Kalkman <michiel@nosuchtype.com>"
copyright = "2017, Michiel Kalkman <michiel@nosuchtype..com>"
license_file = ["LICENSE", "4"]
extended_description = """\
Gears CLI tool
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/gears-cli", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/gears-cli/README", "644"],
]
