[package]
name = "gears-cli"
version = "0.1.11"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
description = "Gears CLI tool"
documentation = "https://docs.rs/xflow"
homepage = "https://github.com/gears-project/gears-cli"
repository = "https://github.com/gears-project/gears-cli.git"
readme = "README.md"
keywords = ["gears"]
categories = []
license = "MIT"
build = "build.rs"

[dependencies]
gears = "0.1.5"
log = "0.4"
env_logger = "0.5"
rustyline = "1.0"
actix = "0.7"
actix-web = "0.7"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.9.2"
uuid = { version = "0.6", features = ["serde", "v4"] }

[dependencies.clap]
version = "~2.32.0"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[build-dependencies]
peg = { version = "0.5" }

[replace]
"gears:0.1.5" = { path = "/home/michiel/dev/gears-project/gears-core-rust" }
# "gears:0.1.5" = { git = 'https://github.com/gears-project/gears-core-rust' }

[package.metadata.deb]
maintainer = "Michiel Kalkman <michiel@nosuchtype.com>"
copyright = "2018, Michiel Kalkman <michiel@nosuchtype..com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Gears CLI tool
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/gears-cli", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/gears-cli/README", "644"],
]
